[Chore]: toList() 메소드 사용으로 수정